@@ -8,11 +8,11 @@ $act = (empty($_REQUEST["a"])? false: $_REQUEST["a"]);
 if(!$auth || $act == "login")
   include("include/login.php");
 elseif($act == "tlist")
-  include("include/listticket.php");
+  include("include/ticketl.php");
 elseif($act == "grant")
   include("include/newgrant.php");
 elseif($act == "glist")
-  include("include/listgrant.php");
+  include("include/grantl.php");
 else
   include("include/newticket.php");
 ?>
