@@ -1,5 +1,5 @@
 <?php
 // download ticket system
 include("include/init.php");
-include("include/download.php");
+include("include/ticketr.php");
 ?>
