@@ -1,0 +1,10 @@
+<?php
+includeTemplate('style/include/header.php', array('title' => 'Upload result'));
+?>
+
+<label>Your file has been uploaded successfully.</label>
+<p>A notification link has been sent to the grant owner. Thanks</p>
+
+<?php
+includeTemplate('style/include/footer.php');
+?>
